<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/isbnlable"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="0.30"
                android:gravity="center_vertical|right"
                android:text="@string/ISBN"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ISBNNO"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="@string/ISBN"
                 android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/contentslable"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center_vertical|right"
                android:text="@string/contentslable"
                android:textSize="16sp" 
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="@string/contentslable"
                 android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/authorlabel"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center_vertical|right"
                android:text="@string/authorlabel"
                android:textSize="16sp" 
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/author"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="@string/authorlabel"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/classlabel"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center_vertical|right"
                android:text="@string/classlabel"
                android:textSize="16sp" 
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/classnumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="@string/classlabel"
                 android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/positionlabel"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center_vertical|right"
                android:text="@string/positionabel"
                android:textSize="16sp" 
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/postion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="@string/positionabel"
                 android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal">

         <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" 
        android:gravity="bottom|center_horizontal"/>
    </LinearLayout>
   

</LinearLayout>
